# codemap

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  package.json
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
benches/: db.rs  graph.rs  hash.rs  helpers.rs  index.rs  parser.rs  scorer.rs
docs/: CODEMAP_CLI.md  IMPLEMENTATION_PLAN.md  V0.2_IMPLEMENTATION_PLAN.md
eval/: .gitignore  CLAUDE.md  LAYER1_SPEC.md  LAYER3_SPEC.md  Makefile  RESULTS.md  TODO.md
eval/datasets/: express.json  hono.json  tldraw.json
eval/scripts/: build_fixture.sh
eval/src/: ab.rs  claude_client.rs  e2e.rs  history.rs  main.rs  metrics.rs  report.rs  session.rs  tools.rs  workspace.rs
npm/codemap-darwin-arm64/: package.json
npm/codemap-darwin-x64/: package.json
npm/codemap-linux-arm64-gnu/: package.json
npm/codemap-linux-x64-gnu/: package.json
npm/codemap-linux-x64-musl/: package.json
npm/codemap-win32-x64-msvc/: package.json
recipes/: onboard.md  refactor.md  review.md  security.md  tests.md
scripts/: postinstall.js  run.js
src/: api.rs  context.rs  db.rs  deps.rs  enrich.rs  graph.rs  hash.rs  index.rs  lib.rs  main.rs  map.rs  mcp.rs  parser.rs  query.rs  resolver.rs  scorer.rs  setup.rs  symbol.rs  types.rs  walk.rs
tests/: cli_integration.rs
tests/fixtures/simple/: index.ts  types.ts  utils.ts
