[package]
name = "codemap"
version = "0.2.0"
edition = "2024"
description = "Code intelligence for JS/TS codebases"
license = "MIT"

[[bin]]
name = "codemap"
path = "src/main.rs"

[[bin]]
name = "codemap-eval"
path = "eval/src/main.rs"

[dependencies]
# Parsing & semantic analysis
oxc = { version = "0.118", features = ["full"] }
oxc_resolver = "11.19"

# CLI framework
clap = { version = "4.5", features = ["derive"] }

# Graph & ranking
petgraph = "0.8"

# Storage
rusqlite = { version = "0.38", features = ["bundled"] }

# File walking
ignore = "0.4"

# Content hashing
blake3 = "1.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Parallelism
rayon = "1.10"

# HTTP client (blocking, lightweight — no async runtime)
ureq = { version = "3", features = ["json"] }

# Utilities
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tempfile = "3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "graph"
harness = false

[[bench]]
name = "hash"
harness = false

[[bench]]
name = "scorer"
harness = false

[[bench]]
name = "db"
harness = false

[[bench]]
name = "index"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
